# mm26

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
.agents/: CBBD.md  MODEL.md  PIPELINE.md  PLANS.md
.agents/execplans/: brier_optimization_v1.md
.agents/kaggle/: data_notes.md  overview.md
.agents/kaggle/winning_strategies/: 24.md  25.md
.github/workflows/: daily_pipeline.yml
contest/: data_notes.md
notebooks/: bracket_2026.ipynb  ml_walkthrough.ipynb  pipeline_explorer.ipynb
notebooks/quick_notes/: pipeline_smoke.py  test.ipynb
src/mm26/: Untitled-1.ipynb  __init__.py  config.py  features.py  ingest.py  model.py  orchestrate.py  pipeline.py  ratings.py  transform.py  validate.py
tests/: test_pipeline_contracts.py  test_pipeline_utils.py
tmpawq1i62h/: check_sub.py  lookup.py  verify_both.py  verify_sub.py
