[project]
name = "mm26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cbbd>=1.23.2",
    "claude>=0.4.11",
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "polars>=1.39.0",
    "prophet>=1.3.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "xgboost>=3.1.3",
]
